--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,16 @@
 version: '3'
 
-services:
+services: 
   nodejs:
     #fill out the configuration here
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: node:10-alpine
+    container_name: Nodejs
+    restart: unless-stopped
+
+    # end configuration
     networks:
       - app-network
   
@@ -28,7 +36,7 @@ volumes:
     driver_opts:
       type: none
       #fill out your absolute path to your folder here
-      device: /absolute/path/to/web/template/folder
+      device: "/mnt/c/Users/jkl22/Documents/UMD Fall2022/CMSC389T/CMSC389T-Web-Template"
       o: bind
 
 networks:
