--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -20,4 +20,4 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          git clone git@github.com:jlee882/CMSC389T-Web-Template.git
+          git clone https://github.com/jlee882/CMSC389T-Web-Template.git
